fix:overflow-x hidden not working on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -14,17 +14,13 @@ body {
 
 /* Navbar */
 
-.nav {
+nav {
     height: 5rem;
     padding: 0 2rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    box-shadow: 0 2px 5px -2px rgba(0, 0, 0, 0.4)
-}
-
-.nav-toggle {
-    display: none;
+    box-shadow: 0 2px 5px -2px rgba(0, 0, 0, 0.4);
 }
 
 .nav-logo {
@@ -422,32 +418,24 @@ footer {
 }
 
 /* Media Query for mobile devices*/
-@media only screen and (max-device-width: 768px) {
-
-
+@media only screen and (min-device-width: 320px) and (max-device-width: 768px) {
     .toggle-btn {
         display: block;
-        z-index: 2000;
-    }
-
-    .close-btn {
-        background-image: url("../assets/img/xmark-solid.svg");
         z-index: 9999;
     }
 
     .nav-links {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
         position: absolute;
         right: 0;
         top: 0;
         width: 50%;
         height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
         background: #f5f5f5;
         color: white;
-        z-index: 1000;
         transform: translateX(100%);
         transition: transform .5s ease-in;
     }
